[package]
name = "rubylang"
version = "0.1.2"
edition = "2021"
rust-version = "1.80"
authors = ["MenkeTechnologies <linux.dev25@gmail.com>"]
description = "Ruby as a fusevm frontend: a lexer/parser and compiler to fusevm::Chunk on a RubyHost object heap, with no bespoke VM or JIT — the first compiled standalone Ruby runtime"
license = "MIT"
repository = "https://github.com/MenkeTechnologies/rubylang"
homepage = "https://menketechnologies.github.io/rubylang/"
documentation = "https://docs.rs/rubylang"
readme = "README.md"
keywords = ["ruby", "interpreter", "compiler", "jit", "fusevm"]
categories = ["command-line-utilities", "compilers"]
publish = true
# Dev-only artifacts kept out of the published crate. Consumers get src + the
# `ruby`/gen-docs/parity bins, the man page, and shell completions — not the
# HUD site, CI config, integration-test corpus, self-test .rb examples, or the
# bug tracker. None are referenced at compile time (no include_str! into them),
# so the packaged crate still builds and its bins run.
exclude = [
    "/docs/",
    "/.github/",
    "/tests/",
    "/examples/",
    "/scripts/",
    "/BUGS.md",
]

# rubylang is a standalone crate, not a workspace member. An explicit empty
# `[workspace]` stops cargo walking up to the MenkeTechnologiesMeta parent.
[workspace]

[lib]
name = "rubylang"
path = "src/lib.rs"
# staticlib so an AOT object can be linked against the rubylang runtime (the
# extension-op dispatch + the fusevm AOT runtime) into a standalone native
# executable via `ruby --build`.
crate-type = ["rlib", "staticlib"]

[[bin]]
name = "ruby"
path = "src/main.rs"

# Offline generator for docs/reference.html — renders the builtin/method
# reference (src/lsp.rs corpus) as a static page. Run before pushing Pages.
[[bin]]
name = "gen-docs"
path = "src/bin/gen_docs.rs"

# Differential parity harness: runs the corpus through rubyrs and the reference
# `ruby`, diffing stdout. Development tool — needs `ruby` on PATH, so CI never
# runs it; its frozen outputs live in tests/data/parity_expected.txt, which
# tests/parity.rs replays with no `ruby` installed.
[[bin]]
name = "parity"
path = "src/bin/parity.rs"

[dependencies]
# Ruby executes on fusevm. rubyrs is a pure frontend: it lowers Ruby to fusevm
# bytecode (src/compiler.rs) and hosts the Ruby object heap (src/host.rs,
# reached from fusevm's extension handler). Object/String/Array/Hash cells ride
# through the VM as `Value::Obj(u32)` handles into that heap.
#
# `jit-disk-cache` turns on fusevm's three-tier Cranelift JIT *and* its
# persistent on-disk cache of compiled native code (keyed by chunk hash), so hot
# Ruby loops trace-compile and warm runs skip recompilation. `aot` enables the
# ahead-of-time object emitter behind `ruby --build`.
fusevm = { version = "0.14.10", features = ["jit", "jit-disk-cache", "aot"] }

clap = { version = "4.5", features = ["derive", "cargo"] }
thiserror = "2.0"
rustc-hash = "2.1"
# Ruby Hash preserves insertion order (observable in `each`/`to_a`/inspect).
indexmap = "2"

# rkyv-backed bytecode cache at ~/.rubyrs/scripts.rkyv (mirrors zshrs/elisprs):
# the outer shard is a zero-copy rkyv archive; the inner per-script fusevm::Chunk
# is bincode (fusevm::Chunk is serde-owned, not rkyv::Archive). Versioned from
# day one so a cached .rb that worked never breaks (compat floor).
rkyv = { version = "0.7", features = ["validation", "archive_le", "size_32"] }
bincode = "1.3"
memmap2 = "0.9"
dirs = "5"
once_cell = "1"

# LSP (`ruby --lsp`) + DAP (`ruby --dap`) over stdio. libc gives the DAP server
# a pipe + dup2 to capture the debuggee's stdout (puts/print) so program output
# streams as `output` events instead of corrupting the JSON-RPC channel.
lsp-server = "0.7.9"
lsp-types = "0.97.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"

# Interactive REPL (`ruby --repl` / TTY fallthrough): reedline line editor,
# nu-ansi-term for the banner/status colors, sysinfo for the live stats box.
# Pins match strykelang/vimlrs REPL exactly.
reedline = "0.47.0"
nu-ansi-term = "0.50"
sysinfo = { version = "0.38", default-features = false, features = ["system"] }
toml = "0.8"

# Glob matcher for the AOP method-call intercept engine (src/intercepts.rs) —
# `*`/`?`/char-class matching of intercept patterns against method names.
regex = "1"
glob = "0.3"

# Arbitrary-precision integers: Ruby Integer auto-promotes past the i64 range
# (2**64, factorials, …) instead of overflowing. Values that fit stay `i64`;
# only the overflow path allocates a `BigInt` heap object.
num-bigint = "0.4"
num-integer = "0.1"
num-traits = "0.2"
# Exact rational numbers (`Rational(1, 2)`, `1r`) built on the bignum types.
num-rational = "0.4"

[dev-dependencies]
tempfile = "3"
